[package]
name = "rust-sudoku"
version = "0.1.0"
authors = ["Andrey Konovalov <adech.fo@gmail.com>"]

[[bin]]
name = "rust-sudoku"
path = "src/main.rs"

[dependencies]
rand = "*"
piston = "*"
piston_window = "*"
piston2d-opengl_graphics = "*"
piston2d-graphics = "*"
pistoncore-sdl2_window = "*"
freetype-rs = "*"
find_folder = "*"
