[package]
name = "rust-sudoku"
version = "0.1.2"
authors = ["Andrey Konovalov <adech.fo@gmail.com>"]

[[bin]]
name = "rust-sudoku"
path = "src/main.rs"

[dependencies]
rand = "*"
piston = "*"
piston_window = "*"
pistoncore-glutin_window = "*"
piston2d-graphics = "0.16.0"
piston2d-opengl_graphics = "0.30.0"
